# Template

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
App/: CMakeLists.txt
App/App/: Main.cpp
Engine/: CMakeLists.txt
Engine/Engine/: Config.hpp
Engine/Engine/Core/: Engine.cpp  Engine.hpp  EngineTest.cpp
Engine/Engine/Log/: Logger.cpp  Logger.hpp
Scripts/: Build.sh  Run.sh  Test.sh
